--- a/src/App.css
+++ b/src/App.css
@@ -2,38 +2,58 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  margin-top: 7rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(6, 1fr);
+  width: 500px;
+  height: 50vh;
+  row-gap: 1px;
+  background-color: #d1d1d1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+.display {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  background-color: rgb(133, 134, 147);
+  color: #fff;
+  padding: 0.5rem;
+}
 
-  to {
-    transform: rotate(360deg);
-  }
+.display > span {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.last-row {
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr;
+  column-gap: 1px;
+}
+
+.row {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 1px;
+}
+
+.operator {
+  background-color: #f4913e;
+}
+
+.btn {
+  border: 0;
+}
+
+.btn:hover {
+  background-color: #d1d1d1;
 }
